k8s/frontend-deploymentt.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: lrag

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: biwass101/library-frontend:1.2 

          ports:
            - containerPort: 3000
